--- a/main.tex
+++ b/main.tex
@@ -59,10 +59,7 @@
 \useStandardChannels                     % Load FOH and IEM channels from channelConfig.tex  
 \useStandardVenueRequirements           % Load venue requirements from channelConfig.tex
 
-% CHOOSE YOUR STAGE PLOT (uncomment one):
-\useStandardStagePlot                   % Standard rock band setup
-% \useFestivalStagePlot                 % Large festival setup
-% \useAcousticStagePlot                 % Acoustic/unplugged setup
+\useStandardStagePlot
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                              DOCUMENT BEGINS                                  %
@@ -122,7 +119,7 @@ Signale, die aus unserem IEM-/Stage-Rack fließen:
 
 \textbf{Legende:}
 \begin{itemize}
-    \item Stromanschlüsse benötigt bei rotem Kreis
+    \item Stromanschlüsse benötigt bei markierten Stellen
     \item Musikerpositionen wie gezeigt  
     \item Mindest-Bühnenmasse: 6 m × 4 m
 \end{itemize}
