fix: minor Spelling and formatting fixes

--- a/main.tex
+++ b/main.tex
@@ -113,39 +113,21 @@ Signale, die aus unserem IEM-/Stage-Rack fließen:
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%                              ADDITIONAL REQUIREMENTS                          %
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section{Zusätzliche Anforderungen}
-
-\subsection{Tontechnik}
-\begin{itemize}
-    \item FOH-Mischpult mit minimum 16 Eingangskanälen
-    \item ein für die Größe der Location geeignetes PA-System
-\end{itemize}
-
-\subsection{Bühnenaufbau}
-\begin{itemize}
-    \item Bühnenmasse: minimum 6 m (Breite) x 4 m (Tiefe)
-    \item Strom:  x Schuko (230V) Steckdosen auf der Bühne
-    \item Mikrofonstative: 6x Galgen-Stative, 2x gerade Stative
-    \item angemessene Bühnenbeleuchtung (Performance und Arbeitslicht)
-\end{itemize}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                              CONTACT INFORMATION                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Kontaktinformationen}
 
 \textbf{Technischer Kontakt der Band:}\\
+\\
 \printcontactinfo
+\\
 
 \textbf{Am Veranstaltungstag:}
 \begin{itemize}
     \item Load-in: \printloadintime
     \item Aufbau-Dauer: \printsetuptime
-    \item Soundcheck: 30 Minuten nach Aufbau-Abschluss
+    \item Soundcheck: beliebig nach Aufbau-Abschluss
     \item Bitte technischen Ansprechpartner der Location während Load-in verfügbar halten
 \end{itemize}
 
